--- a/app/src/main/res/layout/activity_take_exam.xml
+++ b/app/src/main/res/layout/activity_take_exam.xml
@@ -170,7 +170,9 @@
             <TextView
                 android:id="@+id/instruction"
                 android:layout_height="wrap_content"
-                android:layout_width="250dp"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
                 android:layout_below="@+id/take_demo_exam"
                 android:layout_marginTop="30dp"
                 android:layout_centerHorizontal="true"
