--- a/app/src/main/res/layout/leader_board_item.xml
+++ b/app/src/main/res/layout/leader_board_item.xml
@@ -28,7 +28,7 @@
             android:layout_height="30dp"
             android:layout_width="30dp"
             android:background="@drawable/circle_number_white"
-            android:text="01"
+            android:text=""
             android:textColor="@color/colorPrimaryDark"
             android:gravity="center"
             android:layout_centerVertical="true"
@@ -50,7 +50,7 @@
             android:id="@+id/star"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="20"
+            android:text=""
             android:layout_toRightOf="@+id/icon"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="14sp"
@@ -60,7 +60,7 @@
 
         <TextView
             android:id="@+id/name"
-            android:text="Adewole Babatunde"
+            android:text=""
             android:layout_width="wrap_content"
             android:layout_toRightOf="@id/number"
             android:layout_marginLeft="10dp"
