payment page checking card validity hidden in bg, test time reinitialized to 10 minutes for test

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,91 +7,101 @@
     android:layout_height="match_parent"
     android:background="#ffffff">
 
+    <ImageView
+        android:id="@+id/close"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginLeft="30dp"
+        android:layout_gravity="left"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/back2" />
 
-    <LinearLayout
-        android:id="@+id/textsplash"
-        android:elevation="6dp"
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:layout_below="@+id/close"
+        android:layout_marginTop="20dp">
 
 
-        <ImageView
-            android:id="@+id/close"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="30dp"
-            android:layout_gravity="left"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/back2" />
-
-
-        <ImageView
-            android:id="@+id/icon2"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/logo"/>
-
-
-        <TextView
-            android:id="@+id/header"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/textsplash"
+            android:elevation="6dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Forgot password"
-            android:textSize="19sp"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_marginTop="30dp"
-            />
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:orientation="vertical"
+            android:gravity="center">
 
 
-        <TextView
-            android:id="@+id/header1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Enter the affected account's email"
-            android:textSize="12sp"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_marginTop="55dp"
-            />
-
-        <ImageView
-            android:id="@+id/emailImage"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="260dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/transparent_text"/>
-
-        <EditText
-            android:id="@+id/email"
-            android:textSize="14sp"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_width="225dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="-42dp"
-            android:inputType="textEmailAddress"
-            android:backgroundTint="#ffffff"
-            android:textCursorDrawable="@null"/>
-
-        <Button
-            android:id="@+id/recover"
-            android:layout_height="50dp"
-            android:layout_width="260dp"
-            android:text="Recover password"
-            android:textAllCaps="false"
-            android:background="@drawable/button"
-            android:layout_marginTop="60dp"
-            android:textColor="@android:color/white"/>
+            <ImageView
+                android:id="@+id/icon2"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/logo"/>
 
 
+            <TextView
+                android:id="@+id/header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Forgot password"
+                android:textSize="19sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginTop="30dp"
+                />
 
-    </LinearLayout>
+
+            <TextView
+                android:id="@+id/header1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Enter the affected account's email"
+                android:textSize="12sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginTop="55dp"
+                />
+
+            <ImageView
+                android:id="@+id/emailImage"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="260dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/transparent_text"/>
+
+            <EditText
+                android:id="@+id/email"
+                android:textSize="14sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_width="225dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="-42dp"
+                android:inputType="textEmailAddress"
+                android:backgroundTint="#ffffff"
+                android:textCursorDrawable="@null"/>
+
+            <Button
+                android:id="@+id/recover"
+                android:layout_height="50dp"
+                android:layout_width="260dp"
+                android:text="Recover password"
+                android:textAllCaps="false"
+                android:background="@drawable/button"
+                android:layout_marginTop="60dp"
+                android:textColor="@android:color/white"/>
+
+
+
+        </LinearLayout>
+
+
+    </ScrollView>
+
 
 
 
