--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -336,6 +336,7 @@
                         android:layout_below="@id/success"
                         android:layout_marginTop="25dp"
                         android:textSize="16sp"
+                        android:textStyle="bold"
                         />
 
 
